data/collection/fixes/descriptions/scala/scala-8878
Line breaks added for clarity. Can't imagine how it goes this wrong.
```scala
// okay, true dat
scala> implicitly[CanBuildFrom[Array[Int], Char, Array[Boolean]]]
<console>:9: error: Cannot construct a collection
of type Array[Boolean]
with elements of type Char 
based on a collection of type Array[Int].
              implicitly[CanBuildFrom[Array[Int], Char, Array[Boolean]]]
                        ^

scala> type CanBuild[-From, +To] = CanBuildFrom[_, From, To]
defined type alias CanBuild

// um, what.
scala> implicitly[CanBuild[Char, Array[Boolean]]]
<console>:10: error: Cannot construct a collection
of type  
with elements of type Array[Boolean]
based on a collection of type Char.
              implicitly[CanBuild[Char, Array[Boolean]]]
                        ^
```